bin_PROGRAMS=offlinefs tools/offmedia
bin_SCRIPTS=tools/offimport.sh
offlinefs_SOURCES= database.cxx  fs.cxx  fsdb.cxx  main.cxx  medium.cxx  source.cxx  util.cxx fsnodes/directory.cxx  fsnodes/file.cxx  fsnodes/node.cxx  fsnodes/symlink.cxx 
tools_offmedia_SOURCES = tools/offmedia.cxx database.cxx 
sysconf_offlinefsdir=$(sysconfdir)/offlinefs
sysconf_offlinefs_DATA=etc/insert
