bin_PROGRAMS=offlinefs tools/offmedia
bin_SCRIPTS=tools/offimport.sh
offlinefs_SOURCES= database.cxx  fs.cxx  fsdb.cxx  main.cxx  medium.cxx  source.cxx  util.cxx fsnodes/directory.cxx  fsnodes/file.cxx  fsnodes/node.cxx  fsnodes/symlink.cxx common.hxx fs.hxx fsnodes.hxx medium.hxx util.hxx database.hxx fsnodes/directory.hxx fsnodes/node.hxx register.hxx fsdb.hxx fsnodes/file.hxx fsnodes/symlink.hxx source.hxx
tools_offmedia_SOURCES = tools/offmedia.cxx database.cxx database.hxx
sysconf_offlinefsdir=$(sysconfdir)/offlinefs
dist_sysconf_offlinefs_DATA=etc/insert
