lib_LTLIBRARIES = libofflinefs.la
libofflinefs_la_SOURCES = database.cxx database.hxx fsdb.cxx fsdb.hxx fsnodes/directory.cxx fsnodes/directory.hxx fsnodes/file.cxx fsnodes/file.hxx fsnodes.hxx fsnodes/node.cxx fsnodes/node.hxx fsnodes/symlink.cxx fsnodes/symlink.hxx medium.cxx medium.hxx register.hxx source.cxx source.hxx util.cxx util.hxx common.hxx
libofflinefs_la_LDFLAGS = -release @PACKAGE_VERSION@
