AUTOMAKE_OPTIONS = subdir-objects
lib_LTLIBRARIES = libofflinefs.la
libofflinefs_la_SOURCES = database.cxx database.hxx fsdb.cxx fsdb.hxx fsnodes/directory.cxx fsnodes/directory.hxx fsnodes/file.cxx fsnodes/file.hxx fsnodes.hxx fsnodes/node.cxx fsnodes/node.hxx fsnodes/symlink.cxx fsnodes/symlink.hxx media.hxx media/medium.cxx media/medium.hxx media/directory.hxx media/directory.cxx media/insert.hxx media/insert.cxx register.hxx sources.hxx sources/source.cxx sources/source.hxx sources/file.hxx sources/file.cxx common.hxx scontext.hxx scontext.cxx
libofflinefs_la_LDFLAGS = -release @PACKAGE_VERSION@
